syntax = "proto3";

import "wire.proto";

package perunremote;

message FundingRequestMsg {
    uint32 participant = 1;
    perunwire.Params params = 2;
    perunwire.State initial_state = 3;
    perunwire.Balances funding_agreement = 4;
}

message FundingResponseMsg {
    bytes channel_id = 1;
    bool success = 2;
}

message WatchRequestMsg {
    uint32 participant = 1;
    perunwire.SignedState state = 2;
}

message WatchUpdateMsg {
    perunwire.State initial_state = 1;
    repeated bytes sigs = 2;
}

message WatchResponseMsg {
    bytes channel_id = 1;
    uint64 version = 2;
    bool success = 3;
}

message ForceCloseRequestMsg {
    bytes channel_id = 1;
    // Implicitly optional (messages have explicit presence). I'd love to mark
    // it explicitly as optional to indicate that it is intentionally optional,
    // but that requires protoc version 3.15 which the CI does not have (version
    // on Ubuntu: 3.12.4). We could either enable the experimental flag or
    // remove the optional flag. Since the flag doesn't make a real difference
    // here due to the "message" type, I've removed it.
    WatchUpdateMsg latest = 2;
}

message ForceCloseResponseMsg {
    bytes channel_id = 1;
    bool success = 3;
}

message DisputeNotification {
    bytes channel_id = 1;
}
